--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=Njc5MzQ3MTg2MTg5OTkxOTM3.XkwBcg.qgSKVGF3BGN_wKtBFOXZkYk2D-o
+token=Njc5MzQ3MTg2MTg5OTkxOTM3.XkwHRg.5gholLW0o53hf3hkn3FCqY_w2Nw
 DISCORD_PREFIX=#
