--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "opusscript": "0.0.7",
+    "ytdl-core": "^1.0.9",
     "ytdl-core-discord": "amishshah/ytdl-core-discord"
   }
 }
